# fuzzy_name_match_demo

./: README.md  package-lock.json  package.json
serverless/: Cargo.toml  README.md
serverless/src/: main.rs  request.rs  response.rs
src/: App.tsx  index.css  index.tsx
src/components/: Footer.tsx  Guide.tsx  Header.tsx  Input.tsx  Navbar.tsx  Results.tsx
src/containers/: Body.tsx
src/interfaces/: index.ts
