[package]
name = "serverless"
version = "0.1.0"
authors = ["Henry-bee <henrybyhee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
tokio = "0.2"
lambda_runtime = "*"
lambda_http = "*"
name_match = { git= "https://github.com/Henry-bee/fuzzy_name_match", branch="master"}
http = "0.2"
rayon = "1.3.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"